--- a/C#/Tanks/Tanks/Properties/Resources.resx
+++ b/C#/Tanks/Tanks/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="unnamed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\unnamed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Машинка" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Машинка.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
